--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/WavedStyle" >
+        <uses-permission android:name="android.permission.INTERNET" />
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
         <activity
             android:name="com.waved.streetshout.waved.activities.WelcomeActivity"
             android:label="@string/title_activity_welcome"
@@ -19,7 +21,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.waved.streetshout.waved.activities.PhoneNumberActivity"
+            android:name=".activities.PhoneValidationActivity"
+            android:windowSoftInputMode="stateVisible"
             android:label="@string/title_activity_phone_number"
             android:theme="@style/WavedStyle.NoBar" >
         </activity>
