--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('libs/volley.jar')
+    compile files('libphonenumber-5.9.jar')
 }
