--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.waved.streetshout.waved" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name="utils.WavedApplication"
@@ -23,10 +23,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.PhoneValidationActivity"
-            android:windowSoftInputMode="stateVisible"
-            android:label="@string/title_activity_phone_number"
-            android:theme="@style/WavedStyle.NoBar" >
+            android:name="com.waved.streetshout.waved.activities.PhoneValidationActivity"
+            android:theme="@style/WavedStyle.NoBar"
+            android:windowSoftInputMode="stateVisible" >
+        </activity>
+        <activity
+            android:name="com.waved.streetshout.waved.activities.CodeConfirmationActivity"
+            android:theme="@style/WavedStyle.NoBar"
+            android:windowSoftInputMode="stateVisible" >
         </activity>
     </application>
 
